--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -62,6 +62,7 @@
     "ignore-loader": "^0.1.2",
     "jest": "^27.0.6",
     "jest-extended": "^1.2.0",
+    "jest-junit": "^13.0.0",
     "jsdom": "^16.6.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^10.1.7",
